syntax = "proto3";

package store.v1;

import "business/v1/business.proto";

option go_package = "sabitou/proto/store/v1;storeV1";

service StoreService {
  rpc CreateStore(CreateStoreRequest) returns (CreateStoreResponse);
  rpc GetStore(GetStoreRequest) returns (GetStoreResponse);
  rpc UpdateStore(UpdateStoreRequest) returns (UpdateStoreResponse);
  rpc DeleteStore(DeleteStoreRequest) returns (DeleteStoreResponse);
}

message Store {
  string id = 1;
  string address = 2;
  string name = 3;
  string description = 5;
  string business_id = 6;
  string created_at = 7;
  string updated_at = 8;
}

message CreateStoreRequest {
  Store store = 1;
}

message CreateStoreResponse {
  string id = 1;
}

message GetStoreRequest {
  string id = 1;
}

message GetStoreResponse {
  string id = 1;
  string address = 2;
  string name = 3;
  string description = 4;
  business.v1.Business business = 5;
  string created_at = 7;
  string updated_at = 8;
}

message UpdateStoreRequest {
  Store store = 1;
}

message UpdateStoreResponse {
  Store store = 1;
}

message DeleteStoreRequest {
  string id = 1;
}

message DeleteStoreResponse {
  bool success = 1;
}
